--- a/repository/packages/amazon/rds/package-install.yaml
+++ b/repository/packages/amazon/rds/package-install.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   serviceAccountName: rds-install
   packageRef:
-    refName: rdspsql.services.tanzu-x.vmware.com
+    refName: psql.aws.references.services.apps.tanzu.vmware.com
     versionSelection:
       constraints: 0.0.1-alpha
   values:
