--- a/repository/packages/amazon/rds/package.yaml
+++ b/repository/packages/amazon/rds/package.yaml
@@ -1,9 +1,9 @@
 apiVersion: data.packaging.carvel.dev/v1alpha1
 kind: Package
 metadata:
-  name: rdspsql.services.tanzu-x.vmware.com.0.0.1-alpha
+  name: psql.aws.references.services.apps.tanzu.vmware.com.0.0.1-alpha
 spec:
-  refName: rdspsql.services.tanzu-x.vmware.com
+  refName: psql.aws.references.services.apps.tanzu.vmware.com
   version: 0.0.1-alpha
   releasedAt: "2021-12-07T15:58:50+00:00"
   releaseNotes: https://docs.vmware.com/en/Services-Toolkit-for-VMware-Tanzu/0.7/services-toolkit-0-7/GUID-overview.html
@@ -44,7 +44,7 @@ spec:
     spec:
       fetch:
       - imgpkgBundle:
-          image: ghcr.io/vmware-tanzu/tanzu-application-platform-reference-packages/ack-rds-psql-instance-bundle@sha256:01481af67e9be08c466e7d98eb1e2e0e904a4965d289d793c41d316aeef59332
+          image: ghcr.io/vmware-tanzu/tanzu-application-platform-reference-packages/psql.aws.references.services.apps.tanzu.vmware.com@sha256:01481af67e9be08c466e7d98eb1e2e0e904a4965d289d793c41d316aeef59332
       template:
       - ytt:
           paths:
