--- a/bundles/azure/aso/psql/bundle/config/99-kapp-config.yml
+++ b/bundles/azure/aso/psql/bundle/config/99-kapp-config.yml
@@ -1,5 +1,6 @@
 apiVersion: kapp.k14s.io/v1alpha1
 kind: Config
+minimumRequiredVersion: 0.48.0
 waitRules:
 - supportsObservedGeneration: false
   ytt:
@@ -28,10 +29,19 @@ waitRules:
             end
         end
   resourceMatchers: &flexibleServerResources
-  - apiVersionKindMatcher: {apiVersion: resources.azure.com/v1beta20200601, kind: ResourceGroup} 
+  - apiVersionKindMatcher: {apiVersion: resources.azure.com/v1beta20200601, kind: ResourceGroup}
   - apiVersionKindMatcher: {apiVersion: dbforpostgresql.azure.com/v1beta20210601, kind: FlexibleServer}
   - apiVersionKindMatcher: {apiVersion: dbforpostgresql.azure.com/v1beta20210601, kind: FlexibleServersDatabase}
   - apiVersionKindMatcher: {apiVersion: dbforpostgresql.azure.com/v1beta20210601, kind: FlexibleServersFirewallRule}
+
+- supportsObservedGeneration: false
+  conditionMatchers:
+  - type: ReconcileSucceeded
+    status: "True"
+    success: true  
+  resourceMatchers:
+  - apiVersionKindMatcher: {apiVersion: secretgen.carvel.dev/v1alpha1, kind: SecretTemplate}
+
 rebaseRules:
 - paths:
   - [metadata, annotations, serviceoperator.azure.com/operator-namespace]
