fix crossplane paths for the publish workflow

--- a/.github/workflows/crossplane-main.yml
+++ b/.github/workflows/crossplane-main.yml
@@ -12,7 +12,9 @@ on:
     branches:
       - main
     paths:
-      - '*/crossplane/**'
+      - 'amazon/crossplane/**'
+      - 'azure/crossplane/**'
+      - 'google/crossplane/**'
 
 jobs:
   pre-publish:
